# rust-sessionizer

./: .gitignore  Cargo.toml  README.md  cfg.example.json  cfg.json
src/: main.rs
src/auth/: auth.rs  mod.rs  oauth_async.rs
src/cli/: cli.rs  exit.rs  mod.rs  open.rs
src/config/: config.rs  editor.rs
src/env/: env.rs
src/repo/: repo.rs
src/tui/: exit.rs  mod.rs  open.rs  tui.rs
src/util/: util.rs
